--- a/matches.html
+++ b/matches.html
@@ -51,10 +51,14 @@
     לצערי לא ראיתי את המשחק בשידור חי, אך הדיווחים מדברים על הופעה מבטיחה של שחקני הרכש.</p>
   </section>
 
-  <section>
+   <section>
     <h2>⚽ המשחק הבא – ארסנל נגד ניוקאסל (27.07.25)</h2>
-    <p>משחק ידידות נוסף במחנה האימונים. הזדמנות נוספת לשחקנים להיכנס לכושר, לצוות לבחון הרכבים, ולקהל להתלהב. נחזיק אצבעות 💪</p>
+    <p>המשחק הקרוב יהיה הראשון של ארסנל הקיץ מול יריבה אנגלית – ואין יריבה ראויה יותר מניוקאסל החזקה. <br>
+    מדובר באתגר משמעותי עבור השחקנים, במיוחד עבור שחקני הרכש שיצברו עוד דקות משחק וימשיכו להיכנס לעניינים. <br>
+    מיקל ארטטה צפוי לבחון שיפורים בשטף ההתקפי ובמשחק הלחץ, ולקבל תמונה טובה יותר על מצבה של הקבוצה בשלב הזה של ההכנות. <br>
+    אישית, אני כבר סופר את השעות למשחק – מרגש לראות את הקבוצה חוזרת לפעולה, עם תקוות גדולות לקראת העונה הקרובה! 🔴⚪</p>
   </section>
+
 
 </body>
 </html>
