--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <section>
     <h2>עדכון אחרון</h2>
-    <p>הקבוצה יצאה עם סגל של 30 שחקנים למסע באסיה. הם נחתו בסינגפור ויתחילו מחנה אימונים שכולל גם סדרת משחקים. נאחל הצלחה לארטטה והשחקנים – אני כמובן אמשיך לעדכן.</p>
+    <p>החתמה שעלולה לשנות את העונה הקרובה ואולי סוף סוף לעשות אותנו מאושרים, חלוץ אימתני, מוכח, שמגיע לקרוע רשתות. משהו שללא ספק היה חסר לנו בשנים האחרונות. המנהל המקצועי החהמקצועי החדש עד עכשיו עושה רכש מרשים, נקווה שארטטה יוכיח את האמונה של ההנהלה בו השנה, אין יותר תירוצים! .</p>
   </section>
 
   <section class="question-box">
