--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <section>
     <h2>עדכון אחרון</h2>
-    <p>החתמה שעלולה לשנות את העונה הקרובה ואולי סוף סוף לעשות אותנו מאושרים, חלוץ אימתני, מוכח, שמגיע לקרוע רשתות. משהו שללא ספק היה חסר לנו בשנים האחרונות. המנהל המקצועי החהמקצועי החדש עד עכשיו עושה רכש מרשים, נקווה שארטטה יוכיח את האמונה של ההנהלה בו השנה, אין יותר תירוצים! .</p>
+    <p>החתמה שעלולה לשנות את העונה הקרובה ואולי סוף סוף לעשות אותנו מאושרים, חלוץ אימתני, מוכח, שמגיע לקרוע רשתות. משהו שללא ספק היה חסר לנו בשנים האחרונות. המנהל המקצועי החדש עד עכשיו עושה רכש מרשים, נקווה שארטטה יוכיח את האמונה של ההנהלה בו השנה, אין יותר תירוצים!- אני אמשיך לעדכן אותכם </p>
   </section>
 
   <section class="question-box">
