--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
   <nav>
     <a href="index.html">ראשי</a>
     <a href="matches.html">סיקור משחקים</a>
+     <a href="lineups.html">הרכבים משוערים</a>
     <a href="https://idanschmidt.github.io/Idan-schmidt--QA/">לבלוג QA שלי</a>
   </nav>
 
