--- a/lineups.html
+++ b/lineups.html
@@ -112,7 +112,7 @@
       </tr>
     </tbody>
   </table>
-
+<p> המשחק יתחיל בשעה 14:30 שעון ישראל, שידור בספורט 2 בטלוויזיה. קישור נוסף למשחק במחשב מוצב לפניכם.  <a href=https://strikeout.im/international-friendly/1/arsenal-vs-newcastle-united-stream </a> </p>
   <a class="back-link" href="index.html">← חזרה לדף הראשי</a>
 
 </body>
