--- a/lineups.html
+++ b/lineups.html
@@ -67,7 +67,7 @@
 </head>
 <body>
 
-  <h1>הרכבים משוערים למשחק הקרוב</h1>
+  <h1>הרכבים למשחק הקרוב</h1>
 
   <div class="teams-header">
     <div>
@@ -92,27 +92,28 @@
     <tbody>
       <tr>
         <td>שוער</td>
-        <td>רמסדייל</td>
-        <td>פופ</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>הגנה</td>
-        <td>וייט, סליבה, גבריאל, טימבר</td>
-        <td>טראיפר, שר, בוטמן, טארגט</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>קישור</td>
-        <td>רייס, אודגור, האברץ</td>
-        <td>גימראייש, ג'ו ווילוק, טונאלי</td>
+        <td> </td>
+        <td></td>
       </tr>
       <tr>
         <td>התקפה</td>
-        <td>סאקה, מרטינלי, ז'סוס</td>
-        <td>אלמירון, איזאק, גורדון</td>
+        <td> </td> 
+        <td> </td>
       </tr>
     </tbody>
   </table>
-<p> המשחק יתחיל בשעה 14:30 שעון ישראל, שידור בספורט 2 בטלוויזיה. קישור נוסף למשחק במחשב מוצב לפניכם.  <a href=https://strikeout.im/international-friendly/1/arsenal-vs-newcastle-united-stream </a> </p>
+<p> המשחק יתחיל בשעה 14:30 שעון ישראל, שידור בספורט 2 בטלוויזיה. קישור נוסף למשחק במחשב מוצב לפניכם.  </p>
+   <a href=https://strikeout.im/international-friendly/1/arsenal-vs-newcastle-united-stream </a>
   <a class="back-link" href="index.html">← חזרה לדף הראשי</a>
 
 </body>
