--- a/lineups.html
+++ b/lineups.html
@@ -113,7 +113,10 @@
     </tbody>
   </table>
 <p> המשחק יתחיל בשעה 14:30 שעון ישראל, שידור בספורט 2 בטלוויזיה. קישור נוסף למשחק במחשב מוצב לפניכם.  </p>
-   <a href=https://strikeout.im/international-friendly/1/arsenal-vs-newcastle-united-stream </a>
+ <a href="https://strikeout.im/international-friendly/1/arsenal-vs-newcastle-united-stream" target="_blank" rel="noopener noreferrer">
+  צפה בשידור המשחק ארסנל - ניוקאסל
+</a>
+
   <a class="back-link" href="index.html">← חזרה לדף הראשי</a>
 
 </body>
