--- a/lineups.html
+++ b/lineups.html
@@ -117,7 +117,7 @@
   צפה בשידור המשחק ארסנל - ניוקאסל
 </a> <br 
 
-  <a class="back-link" href="index.html">← חזרה לדף הראשי</a>
+  <a href="index.html">← חזרה לדף הראשי class="back-link" </a>
 
 </body>
 </html>
