--- a/lineups.html
+++ b/lineups.html
@@ -115,9 +115,9 @@
 <p> המשחק יתחיל בשעה 14:30 שעון ישראל, שידור בספורט 2 בטלוויזיה. קישור נוסף למשחק במחשב מוצב לפניכם.  </p>
  <a href="https://strikeout.im/international-friendly/1/arsenal-vs-newcastle-united-stream" target="_blank" rel="noopener noreferrer">
   צפה בשידור המשחק ארסנל - ניוקאסל
-</a> <br 
+</a>  
 
-  <a href="index.html">← חזרה לדף הראשי class="back-link" </a>
+  <a class="back-link" href="index.html">← חזרה לדף הראשי class="back-link" </a>
 
 </body>
 </html>
