--- a/lineups.html
+++ b/lineups.html
@@ -117,7 +117,7 @@
   צפה בשידור המשחק ארסנל - ניוקאסל
 </a>  
 
-  <a class="back-link" href="index.html">← חזרה לדף הראשי class="back-link" </a>
+  <a class="back-link" href="index.html">← חזרה לדף הראשי  </a>
 
 </body>
 </html>
