--- a/lineups.html
+++ b/lineups.html
@@ -92,23 +92,23 @@
     <tbody>
       <tr>
         <td>שוער</td>
-        <td></td>
-        <td></td>
+        <td>ראיה</td>
+        <td>פופ</td>
       </tr>
       <tr>
         <td>הגנה</td>
-        <td></td>
-        <td></td>
+        <td>וויט,סאליבה,קאלאפיורי,מיילס לואי</td>
+        <td>טריפייר,לאסקלס,ברן,מורפי</td>
       </tr>
       <tr>
         <td>קישור</td>
-        <td> </td>
-        <td></td>
+        <td>מרינו,זובימנדי,אנווארי </td>
+        <td>גימארייש(קפטן),טונאלי,ווילוק</td>
       </tr>
       <tr>
         <td>התקפה</td>
-        <td> </td> 
-        <td> </td>
+        <td>טרואסרד,סאקה(קפטן),האברץ </td> 
+        <td>אלנגה,אוסולה,גורדון </td>
       </tr>
     </tbody>
   </table>
