--- a/matches.html
+++ b/matches.html
@@ -45,18 +45,33 @@
   </nav>
 
   <section>
-    <h2>🟢 המשחק האחרון – ארסנל 0:1 מילאן (23.07.25)</h2>
-    <p>הקבוצה ניצחה את מילאן במשחק ההכנה הראשון שלה. סאקה כבש את שער הניצחון בדקה ה־78. <br>
-    למרות דו קרב הפנדלים שנערך לאחר מכן (בו הפסידה ארסנל), המשחק עצמו הסתיים בניצחון. <br>
-    לצערי לא ראיתי את המשחק בשידור חי, אך הדיווחים מדברים על הופעה מבטיחה של שחקני הרכש.</p>
-  </section>
+  <div style="direction: rtl; font-family: Arial, sans-serif; max-width: 700px; margin: auto;">
+  <h2 style="color: #ba0c2f;">⚽ סיקור משחק: ארסנל 3 - ניוקאסל 2</h2>
+  
+  <p>משחק ההכנה של <strong>ארסנל</strong> מול <strong>ניוקאסל</strong> נפתח בצורה מהוססת. כבר בדקה החמישית ספגה ארסנל שער מוקדם, 
+  לאחר חוסר תיאום בהגנה שאִפשר ליריבה לעלות ליתרון בקלות מפתיעה.</p>
+  
+  <p>אחרי חצי שעה רדומה, הגיע הרגע הראשון של ארסנל במשחק – ובגדול. בדקה ה-32, מהלך של לחץ גבוה אחרי איבוד כדור הסתיים בסדרת 
+  מסירות מהירות ושער נהדר של <strong>מרינו</strong>, שקובע שוויון 1-1.</p>
+  
+  <p>עוד לפני שנרגענו מהשוויון – הגיע המהפך. כדור רוחב מסוכן שפגע בשחקן ניוקאסל מצא את דרכו פנימה – <strong>2-1 לארסנל!</strong></p>
+  
+  <p>למרות הדקות הטובות של התותחנים, ניוקאסל לא ויתרה, ובדקה ה-57 השוותה ל-2-2 בבעיטה מרשימה של <strong>מארפי</strong> מחוץ לרחבה.</p>
+  
+  <p>במהלך המחצית השנייה ביצעה ארסנל חילופים רבים, כאשר <strong>אף שחקן שפתח לא סיים את המשחק</strong> – הזדמנות מצוינת 
+  לרוטציה ולבדיקת עומק הסגל.</p>
+  
+  <p>בדקה ה-83 הגיע הרגע שהרים את כל האוהדים – <strong>מקס דואמן</strong>, ילד בן 15 בלבד, ביצע מהלך אישי מרהיב וגרם לפנדל, 
+  אותו תרגם <strong>מרטין אודגור</strong> לשער ניצחון – <strong>3-2 לארסנל</strong>.</p>
+
+  <h3 style="color: #ba0c2f;">⭐ כוכב המשחק: מקס דואמן</h3>
+  <p><strong>הילד כבש את הלבבות</strong>. עם ביטחון, מהירות ויצירתיות – הוא גנב את ההצגה והוכיח שיש למה לחכות. עתיד מבטיח לתותחנים.</p>
+</div>
+
 
    <section>
-    <h2>⚽ המשחק הבא – ארסנל נגד ניוקאסל (27.07.25)</h2>
-    <p>המשחק הקרוב יהיה הראשון של ארסנל הקיץ מול יריבה אנגלית – ואין יריבה ראויה יותר מניוקאסל החזקה. <br>
-    מדובר באתגר משמעותי עבור השחקנים, במיוחד עבור שחקני הרכש שיצברו עוד דקות משחק וימשיכו להיכנס לעניינים. <br>
-    מיקל ארטטה צפוי לבחון שיפורים בשטף ההתקפי ובמשחק הלחץ, ולקבל תמונה טובה יותר על מצבה של הקבוצה בשלב הזה של ההכנות. <br>
-    אישית, אני כבר סופר את השעות למשחק – מרגש לראות את הקבוצה חוזרת לפעולה, עם תקוות גדולות לקראת העונה הקרובה! 🔴⚪</p>
+    <h2>⚽ המשחק הבא – ארסנל נגד טוטנהאם (31.07.25)</h2>
+    
   </section>
 
 
