--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
   </section>
 
   <section>
-    <h2>עדכון אחרון</h2>
-    <p>החתמה שעלולה לשנות את העונה הקרובה ואולי סוף סוף לעשות אותנו מאושרים, חלוץ אימתני, מוכח, שמגיע לקרוע רשתות. משהו שללא ספק היה חסר לנו בשנים האחרונות. המנהל המקצועי החדש עד עכשיו עושה רכש מרשים, נקווה שארטטה יוכיח את האמונה של ההנהלה בו השנה, אין יותר תירוצים!- אני אמשיך לעדכן אותכם </p>
+    <h2> משהו אישי </h2>
+<p> איזה כיף זה לחזור לשבת מול הטלוויזיה, לפתוח משהו קטן לאכול, ולהרגיש שוב את ההתרגשות של משחק של ארסנל. אחרי תקופה בלי כדורגל, פתאום יש תחושת שייכות, התלהבות, כאילו חזר לך משהו שהיה חסר ביומיום.<br> אני מרגיש שהקבוצה הזו חלק ממני כבר שנים, והעובדה שעוד עונה מתחילה – ממלאת אותי בתקווה, בציפייה, ואפילו קצת עצבנות טובה לפני כל משחק.<br> יאללה ארסנל! הלוואי שזו תהיה עונה שנזכור להרבה זמן. </p>
   </section>
 
   <section class="question-box">
