--- a/lineups.html
+++ b/lineups.html
@@ -76,8 +76,8 @@
     </div>
     <h2>נגד</h2>
     <div>
-      <img src="https://upload.wikimedia.org/wikipedia/en/5/56/Newcastle_United_Logo.svg" alt="סמל ניוקאסל">
-      <p>ניוקאסל</p>
+      <img src="https://upload.wikimedia.org/wikipedia/en/b/b4/Tottenham_Hotspur.svg" alt="סמל טוטנהאם">
+      <p>טוטנהאם</p>
     </div>
   </div>
 
@@ -86,36 +86,35 @@
       <tr>
         <th>עמדה</th>
         <th>ארסנל</th>
-        <th>ניוקאסל</th>
+        <th>טוטנהאם</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>שוער</td>
-        <td>ראיה</td>
-        <td>פופ</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>הגנה</td>
-        <td>וויט,סאליבה,קאלאפיורי,מיילס לואי</td>
-        <td>טריפייר,לאסקלס,ברן,מורפי</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>קישור</td>
-        <td>מרינו,זובימנדי,אנווארי </td>
-        <td>גימארייש(קפטן),טונאלי,ווילוק</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>התקפה</td>
-        <td>טרואסרד,סאקה(קפטן),האברץ </td> 
-        <td>אלנגה,אוסולה,גורדון </td>
+        <td></td>
+        <td></td>
       </tr>
     </tbody>
   </table>
-<p> המשחק יתחיל בשעה 14:30 שעון ישראל, שידור בספורט 2 בטלוויזיה. קישור נוסף למשחק במחשב מוצב לפניכם.  </p>
- <a href="https://strikeout.im/international-friendly/1/arsenal-vs-newcastle-united-stream" target="_blank" rel="noopener noreferrer">
-  צפה בשידור המשחק ארסנל - ניוקאסל
-</a>  
+  <p> קישור לצפייה במשחק יעלה לפני המשחק  </p>
+  <a href="">
+  </a>  
 
   <a class="back-link" href="index.html">← חזרה לדף הראשי  </a>
 
