--- a/lineups.html
+++ b/lineups.html
@@ -63,6 +63,31 @@
     .back-link:hover {
       text-decoration: underline;
     }
+    .teams-header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.teams-header > div {
+  width: 120px;         /* רוחב אחיד לכל בלוק קבוצה */
+  text-align: center;   /* מיישר את התוכן למרכז */
+}
+
+.teams-header img {
+  width: 80px;
+  height: auto;
+  display: block;
+  margin: 0 auto 5px;   /* רווח מתחת לתמונה */
+}
+
+.teams-header p {
+  margin: 0;
+  font-size: 1rem;      /* גודל גופן אחיד */
+  font-weight: bold;    /* להבליט את הטקסט */
+}
+
   </style>
 </head>
 <body>
