--- a/matches.html
+++ b/matches.html
@@ -66,6 +66,10 @@
 
   <h3 style="color: #ba0c2f;">⭐ כוכב המשחק: מקס דואמן</h3>
   <p><strong>הילד כבש את הלבבות</strong>. עם ביטחון, מהירות ויצירתיות – הוא גנב את ההצגה והוכיח שיש למה לחכות. עתיד מבטיח לתותחנים.</p>
+    <p>ארסנל מגיעה למשחק הבא עם רוח גבית חיובית, לאחר שני ניצחונות רצופים במשחקי ההכנה. הצטרפותו של החלוץ החדש <strong>ויקטור גיורקס</strong> מוסיפה ממד נוסף להתקפה, והציפיות לראות את השתלבותו גבוהות. ארטטה ושחקניו ירצו להמשיך את המומנטום החיובי ולהציג יכולת משכנעת נוספת במסגרת ההכנות לעונה.</p>
+
+<p><strong>המשחק הבא:</strong> ארסנל מול טוטנהאם – יום חמישי, 31.7.2025, בשעה 14:30.</p>
+
 </div>
 
 
