--- a/lineups.html
+++ b/lineups.html
@@ -117,28 +117,28 @@
     <tbody>
       <tr>
         <td>שוער</td>
-        <td></td>
-        <td></td>
+        <td>ראיה</td>
+        <td>ויקאריו</td>
       </tr>
       <tr>
         <td>הגנה</td>
-        <td></td>
-        <td></td>
+        <td>וייט,סאליבה,קיוויר,מיילס לואיס</td>
+        <td>פורו,רומרו,ןאן דה ון,דגד ספנס</td>
       </tr>
       <tr>
         <td>קישור</td>
-        <td></td>
-        <td></td>
+        <td>אודגארד,נורגארד,רייס</td>
+        <td>סאר,בנטקור,קודוס,ברגבאל,ווילסון אודוברט</td>
       </tr>
       <tr>
         <td>התקפה</td>
-        <td></td>
-        <td></td>
+        <td>סאקה,האברץ,מרטינלי</td>
+        <td>רישארליסון</td>
       </tr>
     </tbody>
   </table>
   <p> קישור לצפייה במשחק יעלה לפני המשחק  </p>
-  <a href="">
+  <a href="https://strikeout.im/international-friendly/1/arsenal-vs-tottenham-hotspur-stream">
   </a>  
 
   <a class="back-link" href="index.html">← חזרה לדף הראשי  </a>
