--- a/lineups.html
+++ b/lineups.html
@@ -137,9 +137,10 @@
       </tr>
     </tbody>
   </table>
-  <p> קישור לצפייה במשחק יעלה לפני המשחק  </p>
-  <a href="https://strikeout.im/international-friendly/1/arsenal-vs-tottenham-hotspur-stream">
-  </a>  
+<p><strong>קישור לצפייה במשחק:</strong></p>
+<a href="https://strikeout.im/international-friendly/1/arsenal-vs-tottenham-hotspur-stream" target="_blank">
+  <button>לצפייה במשחק</button>
+</a>
 
   <a class="back-link" href="index.html">← חזרה לדף הראשי  </a>
 
