--- a/matches.html
+++ b/matches.html
@@ -10,6 +10,7 @@
       text-align: right;
       font-family: Arial, sans-serif;
       margin: 20px;
+      background-color: #f5f5f5;
     }
 
     header {
@@ -31,6 +32,25 @@
     section {
       margin-bottom: 40px;
     }
+
+    .match-box {
+      background-color: #ffffff;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      max-width: 700px;
+      margin: 0 auto 40px auto;
+    }
+
+    .match-box h2, .match-box h3 {
+      color: #ba0c2f;
+    }
+
+    .highlight {
+      background-color: #f1f1f1;
+      padding: 10px;
+      border-radius: 8px;
+    }
   </style>
 </head>
 <body>
@@ -44,52 +64,46 @@
     <a href="index.html">חזרה לדף הראשי</a>
   </nav>
 
-  <section>
-  <div style="direction: rtl; font-family: Arial, sans-serif; max-width: 700px; margin: auto;">
-  <h2 style="color: #ba0c2f;">⚽ סיקור משחק: ארסנל 3 - ניוקאסל 2</h2>
-  
-  <p>משחק ההכנה של <strong>ארסנל</strong> מול <strong>ניוקאסל</strong> נפתח בצורה מהוססת. כבר בדקה החמישית ספגה ארסנל שער מוקדם, 
-  לאחר חוסר תיאום בהגנה שאִפשר ליריבה לעלות ליתרון בקלות מפתיעה.</p>
-  
-  <p>אחרי חצי שעה רדומה, הגיע הרגע הראשון של ארסנל במשחק – ובגדול. בדקה ה-32, מהלך של לחץ גבוה אחרי איבוד כדור הסתיים בסדרת 
-  מסירות מהירות ושער נהדר של <strong>מרינו</strong>, שקובע שוויון 1-1.</p>
-  
-  <p>עוד לפני שנרגענו מהשוויון – הגיע המהפך. כדור רוחב מסוכן שפגע בשחקן ניוקאסל מצא את דרכו פנימה – <strong>2-1 לארסנל!</strong></p>
-  
-  <p>למרות הדקות הטובות של התותחנים, ניוקאסל לא ויתרה, ובדקה ה-57 השוותה ל-2-2 בבעיטה מרשימה של <strong>מארפי</strong> מחוץ לרחבה.</p>
-  
-  <p>במהלך המחצית השנייה ביצעה ארסנל חילופים רבים, כאשר <strong>אף שחקן שפתח לא סיים את המשחק</strong> – הזדמנות מצוינת 
-  לרוטציה ולבדיקת עומק הסגל.</p>
-  
-  <p>בדקה ה-83 הגיע הרגע שהרים את כל האוהדים – <strong>מקס דואמן</strong>, ילד בן 15 בלבד, ביצע מהלך אישי מרהיב וגרם לפנדל, 
-  אותו תרגם <strong>מרטין אודגור</strong> לשער ניצחון – <strong>3-2 לארסנל</strong>.</p>
+  <!-- סיקור ראשון -->
+  <section class="match-box">
+    <h2>⚽ סיקור משחק: ארסנל 3 - ניוקאסל 2</h2>
 
-  <h3 style="color: #ba0c2f;">⭐ כוכב המשחק: מקס דואמן</h3>
-  <p><strong>הילד כבש את הלבבות</strong>. עם ביטחון, מהירות ויצירתיות – הוא גנב את ההצגה והוכיח שיש למה לחכות. עתיד מבטיח לתותחנים.</p>
-    <hr style="margin: 30px 0; border: none; border-top: 1px solid #ccc;">
+    <p>משחק ההכנה של <strong>ארסנל</strong> מול <strong>ניוקאסל</strong> נפתח בצורה מהוססת. כבר בדקה החמישית ספגה ארסנל שער מוקדם, 
+    לאחר חוסר תיאום בהגנה שאִפשר ליריבה לעלות ליתרון בקלות מפתיעה.</p>
 
-  <h3 style="color: #ba0c2f;">🔜 לקראת המשחק הבא</h3>
-  <p style="background-color: #f9f9f9; padding: 10px; border-radius: 8px;">
-    ארסנל מגיעה למשחק הבא עם רוח גבית חיובית, לאחר שני ניצחונות רצופים במשחקי ההכנה. 
-    הצטרפותו של החלוץ החדש <strong>ויקטור גיורקס</strong> מוסיפה ממד נוסף להתקפה, והציפיות לראות את השתלבותו גבוהות. 
-    ארטטה ושחקניו ירצו להמשיך את המומנטום החיובי ולהציג יכולת משכנעת נוספת במסגרת ההכנות לעונה.
-  </p>
+    <p>אחרי חצי שעה רדומה, הגיע הרגע הראשון של ארסנל במשחק – ובגדול. בדקה ה-32, מהלך של לחץ גבוה אחרי איבוד כדור הסתיים בסדרת 
+    מסירות מהירות ושער נהדר של <strong>מרינו</strong>, שקובע שוויון 1-1.</p>
 
-  <p style="background-color: #f1f1f1; padding: 10px; border-radius: 8px;">
-    <strong>המשחק הבא:</strong> ארסנל מול טוטנהאם – יום חמישי, 31.7.2025, בשעה 14:30.
-  </p>
+    <p>עוד לפני שנרגענו מהשוויון – הגיע המהפך. כדור רוחב מסוכן שפגע בשחקן ניוקאסל מצא את דרכו פנימה – <strong>2-1 לארסנל!</strong></p>
 
+    <p>למרות הדקות הטובות של התותחנים, ניוקאסל לא ויתרה, ובדקה ה-57 השוותה ל-2-2 בבעיטה מרשימה של <strong>מארפי</strong> מחוץ לרחבה.</p>
 
+    <p>במהלך המחצית השנייה ביצעה ארסנל חילופים רבים, כאשר <strong>אף שחקן שפתח לא סיים את המשחק</strong> – הזדמנות מצוינת 
+    לרוטציה ולבדיקת עומק הסגל.</p>
 
+    <p>בדקה ה-83 הגיע הרגע שהרים את כל האוהדים – <strong>מקס דואמן</strong>, ילד בן 15 בלבד, ביצע מהלך אישי מרהיב וגרם לפנדל, 
+    אותו תרגם <strong>מרטין אודגור</strong> לשער ניצחון – <strong>3-2 לארסנל</strong>.</p>
 
-</div>
-
-
-   <section>
-   
-    
+    <h3>⭐ כוכב המשחק: מקס דואמן</h3>
+    <p><strong>הילד כבש את הלבבות</strong>. עם ביטחון, מהירות ויצירתיות – הוא גנב את ההצגה והוכיח שיש למה לחכות. עתיד מבטיח לתותחנים.</p>
   </section>
 
+  <!-- סיקור שני -->
+  <section class="match-box">
+    <h2>⚽ סיקור משחק: ארסנל 0 - טוטנהאם 1</h2>
+
+    <p>במשחק שנערך היום, ארסנל פגשה את היריבה הגדולה <strong>טוטנהאם</strong> למשחק הכנה נוסף. טוטנהאם ניצחה בתוצאה 1-0, 
+    משער יוצא דופן שהובקע כבר במחצית הראשונה – בעיטה אדירה מחצי מגרש שנכנסה לאחר איבוד כדור וטעות קשה של השוער <strong>ראיה</strong>.</p>
+
+    <p>למרות הספיגה, ארסנל ניסתה להגיב ושיתפה שחקנים רבים במהלך המשחק, כולל הופעת בכורה של החלוץ החדש <strong>ויקטור גיורקס</strong>, 
+    שביצע כמה תנועות טובות אך לא הגיע להזדמנות ממשית.</p>
+
+    <p>התצוגה ההתקפית של ארסנל הייתה חלשה יחסית, אך ניתן לראות במשחק זה חלק מתהליך ההכנה והניסוי, עם הרבה רוטציה ושילוב של שחקני סגל.</p>
+
+    <h3>📝 סיכום</h3>
+    <p>המשחק לא האיר פנים לארסנל, אך הוא שימש כהזדמנות נוספת לבדוק שחקנים ולבחון התאמות. כעת ארטטה צריך להפיק לקחים ולכוון את הקבוצה ליכולת טובה יותר בהמשך ההכנות לעונה הקרובה.</p>
+  </section>
 
 </body>
 </html>
+
