--- a/lineups.html
+++ b/lineups.html
@@ -26,14 +26,22 @@
       margin-bottom: 20px;
     }
 
+    .teams-header > div {
+      width: 120px;
+      text-align: center;
+    }
+
     .teams-header img {
       width: 80px;
       height: auto;
+      display: block;
+      margin: 0 auto 5px;
     }
 
-    .teams-header h2 {
+    .teams-header p {
       margin: 0;
-      font-size: 1.5rem;
+      font-size: 1rem;
+      font-weight: bold;
     }
 
     table {
@@ -63,31 +71,6 @@
     .back-link:hover {
       text-decoration: underline;
     }
-    .teams-header {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-.teams-header > div {
-  width: 120px;         /* רוחב אחיד לכל בלוק קבוצה */
-  text-align: center;   /* מיישר את התוכן למרכז */
-}
-
-.teams-header img {
-  width: 80px;
-  height: auto;
-  display: block;
-  margin: 0 auto 5px;   /* רווח מתחת לתמונה */
-}
-
-.teams-header p {
-  margin: 0;
-  font-size: 1rem;      /* גודל גופן אחיד */
-  font-weight: bold;    /* להבליט את הטקסט */
-}
-
   </style>
 </head>
 <body>
@@ -101,8 +84,8 @@
     </div>
     <h2>נגד</h2>
     <div>
-      <img src="https://upload.wikimedia.org/wikipedia/en/b/b4/Tottenham_Hotspur.svg" alt="סמל טוטנהאם">
-      <p>טוטנהאם</p>
+      <img src="https://upload.wikimedia.org/wikipedia/en/7/70/Villarreal_CF_logo.svg" alt="סמל ויאריאל">
+      <p>ויאריאל</p>
     </div>
   </div>
 
@@ -111,38 +94,38 @@
       <tr>
         <th>עמדה</th>
         <th>ארסנל</th>
-        <th>טוטנהאם</th>
+        <th>ויאריאל</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>שוער</td>
-        <td>ראיה</td>
-        <td>ויקאריו</td>
+        <td>—</td>
+        <td>—</td>
       </tr>
       <tr>
         <td>הגנה</td>
-        <td>וייט,סאליבה,קיוויר,מיילס לואיס</td>
-        <td>פורו,רומרו,ןאן דה ון,דגד ספנס</td>
+        <td>—</td>
+        <td>—</td>
       </tr>
       <tr>
         <td>קישור</td>
-        <td>אודגארד,נורגארד,רייס</td>
-        <td>סאר,בנטקור,קודוס,ברגבאל,ווילסון אודוברט</td>
+        <td>—</td>
+        <td>—</td>
       </tr>
       <tr>
         <td>התקפה</td>
-        <td>סאקה,האברץ,מרטינלי</td>
-        <td>רישארליסון</td>
+        <td>—</td>
+        <td>—</td>
       </tr>
     </tbody>
   </table>
-<p><strong>קישור לצפייה במשחק:</strong></p>
-<a href="https://strikeout.im/international-friendly/1/arsenal-vs-tottenham-hotspur-stream" target="_blank">
-  <button>לצפייה במשחק</button>
-</a>
-<br>
-  <a class="back-link" href="index.html">← חזרה לדף הראשי  </a>
+
+  <p><strong>קישור לצפייה במשחק:</strong> קישור יעלה לפני פתיחת המשחק</p>
+
+  <a class="back-link" href="index.html">← חזרה לדף הראשי</a>
 
 </body>
 </html>
+
+
