--- a/lineups.html
+++ b/lineups.html
@@ -84,7 +84,7 @@
     </div>
     <h2>נגד</h2>
     <div>
-     <img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/70/Villarreal_CF_logo.svg/120px-Villarreal_CF_logo.svg.png" alt="סמל ויאריאל">
+     <img src="https://upload.wikimedia.org/wikipedia/he/thumb/b/b3/Villarreal_cf_200px.png/640px-Villarreal_cf_200px.png" alt="סמל ויאריאל">
       <p>ויאריאל</p>
     </div>
   </div>
@@ -127,6 +127,7 @@
 
 </body>
 </html>
+
 
 
 
