--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
   </section>
 
   <footer>
-    <p>עודכן לאחרונה: 31 ביולי 2025</p>
+    <p>עודכן לאחרונה: 4 באוגוסט 2025</p>
     <p><a href="https://www.365scores.com/he/football/team/arsenal-104" target="_blank">צפו בתוצאות וחדשות על ארסנל</a></p>
   </footer>
 
 </body>
 </html>
+
