--- a/index.html
+++ b/index.html
@@ -72,21 +72,29 @@
     במהלך העונה אעדכן כאן לפני ואחרי משחקים, אשתף מחשבות, רגשות ופרשנויות – באהבה ובקנאות של אוהד אמיתי.</p>
   </section>
 
-  <section>
-    <h2> משהו אישי </h2>
-<p> איזה כיף זה לחזור לשבת מול הטלוויזיה, לפתוח משהו קטן לאכול, ולהרגיש שוב את ההתרגשות של משחק של ארסנל. אחרי תקופה בלי כדורגל, פתאום יש תחושת שייכות, התלהבות, כאילו חזר לך משהו שהיה חסר ביומיום.<br> אני מרגיש שהקבוצה הזו חלק ממני כבר שנים, והעובדה שעוד עונה מתחילה – ממלאת אותי בתקווה, בציפייה, ואפילו קצת עצבנות טובה לפני כל משחק.<br> יאללה ארסנל! הלוואי שזו תהיה עונה שנזכור להרבה זמן. </p>
+ <section>
+  <h2>לקראת המשחק</h2>
+  <p>
+    מחר ארסנל תעלה לראשונה העונה לשחק באיצטדיונה הביתי נגד ויאריאל, 
+    תבוא עם כל השחקנים החדשים והוותיקים כדי לתת לקהל הביתי ליהנות. 
+    תרצה להמשיך להתכונן לקראת העונה שמתקרבת בצעדי ענק.
+    <br><br>
+    בנימה אישית – אני מאוד מתרגש. יש חששות, כמו תמיד, אבל התחושה הכללית היא אופטימית. 
+    ארטטה צריך לתת להרכב הראשון לשחק ולהראות לנו שהשנה אנחנו באים לטרוף כל משחק.
+  </p>
+</section>
   </section>
 
   <section class="question-box">
     <h3>חידת השבוע</h3>
-    <p>מי הוא מלך השערים של ארסנל בכל הזמנים?</p>
+    <p>באיזה שנה ארסנל זכתה באליפות הפריימרליג בלי להפסיד משחק אחד?</p>
     <input type="text" id="answer" />
     <button onclick="checkAnswer()">שלח תשובה</button>
     <script>
       function checkAnswer() {
         var userAnswer = document.getElementById('answer').value.trim();
-        if (userAnswer === "תיירי הנרי" || userAnswer === "הנרי") {
-          alert("נכון! הנרי הוא מלך השערים עם 288 שערים בכל המסגרות.");
+        if (userAnswer === "2003-2004" || userAnswer === "2003-2004") {
+          alert("נכון! בעונת 2003-2004 ארסנל זכתה באליפות בלי להפסיד אף משחק");
         } else {
           alert("לא נכון, נסו שוב.");
         }
@@ -107,4 +115,5 @@
 
 </body>
 </html>
+
 
