--- a/lineups.html
+++ b/lineups.html
@@ -121,7 +121,11 @@
     </tbody>
   </table>
 
-  <p><strong>קישור לצפייה במשחק:</strong> קישור יעלה לפני פתיחת המשחק</p>
+  <p><strong>קישור לצפייה במשחק:</strong> 
+    <a href="https://strikeout.im/international-friendly/1/arsenal-vs-villarreal-stream" target="_blank">
+      לחץ כאן לצפייה
+    </a>
+  </p>
 
   <a class="back-link" href="index.html">← חזרה לדף הראשי</a>
 
