--- a/index.html
+++ b/index.html
@@ -72,17 +72,21 @@
     במהלך העונה אעדכן כאן לפני ואחרי משחקים, אשתף מחשבות, רגשות ופרשנויות – באהבה ובקנאות של אוהד אמיתי.</p>
   </section>
 
- <section>
+<section>
   <h2>לקראת המשחק</h2>
   <p>
-    מחר ארסנל תעלה לראשונה העונה לשחק באיצטדיונה הביתי נגד ויאריאל, 
-    תבוא עם כל השחקנים החדשים והוותיקים כדי לתת לקהל הביתי ליהנות. 
-    תרצה להמשיך להתכונן לקראת העונה שמתקרבת בצעדי ענק.
+    היום ארסנל פותחת את הופעות הבית שלה לעונה הזו, מול הקהל הביתי והנאמן, 
+    ומגיעה עם מטרה ברורה – לנצח ולהראות שהיא כאן כדי לרוץ קדימה מההתחלה. 
+    השחקנים החדשים צפויים לקבל דקות, והאוהדים יקבלו הצצה ראשונה למה שמצפה לנו בעונה הקרובה. 
     <br><br>
-    בנימה אישית – אני מאוד מתרגש. יש חששות, כמו תמיד, אבל התחושה הכללית היא אופטימית. 
-    ארטטה צריך לתת להרכב הראשון לשחק ולהראות לנו שהשנה אנחנו באים לטרוף כל משחק.
+    מיקל ארטטה יודע כמה חשוב לפתוח את העונה ברגל ימין, במיוחד במשחק ביתי ראשון, 
+    והוא ירצה לראות קבוצה נמרצת, רעבה ואיכותית – שתראה לא רק פוטנציאל, אלא גם תכלס על המגרש.
+    <br><br>
+    עבור האוהדים – זו הזדמנות להרגיש שוב את הקשר לקבוצה, את ההתרגשות ביציעים, 
+    ואת התקווה שכל עונה מביאה איתה. יאללה ארסנל!
   </p>
 </section>
+
   </section>
 
   <section class="question-box">
@@ -121,6 +125,7 @@
 
 </body>
 </html>
+
 
 
 
