--- a/index.html
+++ b/index.html
@@ -75,17 +75,22 @@
 <section>
   <h2>לקראת המשחק</h2>
   <p>
-    היום ארסנל פותחת את הופעות הבית שלה לעונה הזו, מול הקהל הביתי והנאמן, 
-    ומגיעה עם מטרה ברורה – לנצח ולהראות שהיא כאן כדי לרוץ קדימה מההתחלה. 
-    השחקנים החדשים צפויים לקבל דקות, והאוהדים יקבלו הצצה ראשונה למה שמצפה לנו בעונה הקרובה. 
+    ביום ראשון הקרוב זה מתחיל – העונה החדשה, והפעם עם מבחן קשה כבר במחזור הראשון: 
+    משחק חוץ מול מנצ'סטר יונייטד המתחדשת. שתי הקבוצות עשו שינויים וחיזוקים בקיץ, 
+    וכולנו יודעים כמה הן ירצו לפתוח חזק.  
     <br><br>
-    מיקל ארטטה יודע כמה חשוב לפתוח את העונה ברגל ימין, במיוחד במשחק ביתי ראשון, 
-    והוא ירצה לראות קבוצה נמרצת, רעבה ואיכותית – שתראה לא רק פוטנציאל, אלא גם תכלס על המגרש.
+    בתור אוהד, אני רוצה לראות את ארסנל שלי עולה בלי פחד, בלי להתפשר – 
+    קבוצה שבאה לנצח כל יריבה, בכל מגרש, בכל מצב. 
+    אם רוצים אליפות באנגליה, זו המנטליות שצריך.  
     <br><br>
-    עבור האוהדים – זו הזדמנות להרגיש שוב את הקשר לקבוצה, את ההתרגשות ביציעים, 
-    ואת התקווה שכל עונה מביאה איתה. יאללה ארסנל!
+    האמת? אני כבר לא זוכר מתי סיימתי עונה עם חיוך גדול. 
+    היו יותר מדי רגעים של עצבים, אכזבות ודמעות. 
+    אבל עמוק בפנים, אני עדיין מאמין – ומקווה שדווקא השנה, 
+    בסוף הדרך, כל זה יתמלא בשמחה ובגאווה אדומה.  
+    יאללה ארסנל! 🔴⚪
   </p>
 </section>
+
 
   </section>
 
@@ -125,6 +130,7 @@
 
 </body>
 </html>
+
 
 
 
