--- a/lineups.html
+++ b/lineups.html
@@ -84,8 +84,8 @@
     </div>
     <h2>נגד</h2>
     <div>
-     <img src="https://upload.wikimedia.org/wikipedia/he/thumb/b/b3/Villarreal_cf_200px.png/640px-Villarreal_cf_200px.png" alt="סמל ויאריאל">
-      <p>ויאריאל</p>
+      <img src="https://upload.wikimedia.org/wikipedia/en/7/7a/Manchester_United_FC_crest.svg" alt="סמל מנצ'סטר יונייטד">
+      <p>מנצ'סטר יונייטד</p>
     </div>
   </div>
 
@@ -94,7 +94,7 @@
       <tr>
         <th>עמדה</th>
         <th>ארסנל</th>
-        <th>ויאריאל</th>
+        <th>מנצ'סטר יונייטד</th>
       </tr>
     </thead>
     <tbody>
@@ -121,16 +121,13 @@
     </tbody>
   </table>
 
-  <p><strong>קישור לצפייה במשחק:</strong> 
-    <a href="https://strikeout.im/international-friendly/1/arsenal-vs-villarreal-stream" target="_blank">
-      לחץ כאן לצפייה
-    </a>
-  </p>
+  <p><strong>קישור לצפייה במשחק:</strong> קישור יעלה לפני המשחק</p>
 
   <a class="back-link" href="index.html">← חזרה לדף הראשי</a>
 
 </body>
 </html>
+
 
 
 
