--- a/matches.html
+++ b/matches.html
@@ -1,20 +1,20 @@
-<!DOCTYPE html>
-<html lang="he">
+<!DOCTYPE html><!DOCTYPE html>
+<html lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>סיקורי משחקים - בלוג ארסנל של עידן</title>
   <style>
     body {
-      direction: rtl;
-      text-align: right;
       font-family: Arial, sans-serif;
       margin: 20px;
       background-color: #f5f5f5;
+      color: #222;
     }
 
     header {
       text-align: center;
+      margin-bottom: 20px;
     }
 
     nav {
@@ -29,27 +29,112 @@
       font-weight: bold;
     }
 
-    section {
+    /* כרטיסי משחק */
+    .cards-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      gap: 20px;
       margin-bottom: 40px;
     }
 
-    .match-box {
-      background-color: #ffffff;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      padding: 20px;
-      max-width: 700px;
-      margin: 0 auto 40px auto;
+    .match-card {
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      padding: 15px;
+      text-align: center;
     }
 
-    .match-box h2, .match-box h3 {
+    .match-card img {
+      width: 50px;
+      height: auto;
+      margin: 10px;
+    }
+
+    .match-card h3 {
+      margin: 10px 0;
       color: #ba0c2f;
     }
 
-    .highlight {
+    .match-card p {
+      font-size: 0.9rem;
+    }
+
+    .match-card a {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 8px 12px;
+      background-color: #ba0c2f;
+      color: white;
+      border-radius: 5px;
+      text-decoration: none;
+    }
+
+    .match-card a:hover {
+      background-color: #a50b28;
+    }
+
+    /* רשימת סיקורים */
+    .reviews-list {
+      background-color: white;
+      border-radius: 10px;
+      padding: 20px;
+      margin-bottom: 40px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    .reviews-list h2 {
+      color: #ba0c2f;
+      margin-bottom: 15px;
+    }
+
+    .reviews-list ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .reviews-list li {
+      margin-bottom: 10px;
+    }
+
+    .reviews-list a {
+      color: darkred;
+      text-decoration: none;
+    }
+
+    .reviews-list a:hover {
+      text-decoration: underline;
+    }
+
+    /* טבלת ליגה */
+    .league-table {
+      background-color: white;
+      border-radius: 10px;
+      padding: 20px;
+      max-width: 500px;
+      margin: 0 auto 40px auto;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    .league-table h2 {
+      color: #ba0c2f;
+      text-align: center;
+      margin-bottom: 15px;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    th, td {
+      border: 1px solid #ddd;
+      padding: 8px;
+      text-align: center;
+    }
+
+    th {
       background-color: #f1f1f1;
-      padding: 10px;
-      border-radius: 8px;
     }
   </style>
 </head>
@@ -57,53 +142,65 @@
 
   <header>
     <h1>סיקורי משחקים</h1>
-    <p>כאן תוכלו לקרוא את הדעות, הסיכומים והמחשבות שלי אחרי כל משחק.</p>
+    <p>כאן תמצאו את הסיכומים, הדעות והמחשבות שלי על כל משחק של ארסנל.</p>
   </header>
 
   <nav>
     <a href="index.html">חזרה לדף הראשי</a>
   </nav>
 
-  <!-- סיקור ראשון -->
-  <section class="match-box">
-    <h2>⚽ סיקור משחק: ארסנל 3 - ניוקאסל 2</h2>
+  <!-- כרטיסי משחק -->
+  <div class="cards-container">
+    <div class="match-card">
+      <h3>ארסנל 3 - ליברפול 1</h3>
+      <img src="https://upload.wikimedia.org/wikipedia/en/5/53/Arsenal_FC.svg" alt="סמל ארסנל">
+      <img src="https://upload.wikimedia.org/wikipedia/en/0/0c/Liverpool_FC.svg" alt="סמל ליברפול">
+      <p>תאריך: 15/08/2025</p>
+      <a href="#">לקריאת הסיקור</a>
+    </div>
+    <!-- אפשר להוסיף עוד כרטיסים כאן -->
+  </div>
 
-    <p>משחק ההכנה של <strong>ארסנל</strong> מול <strong>ניוקאסל</strong> נפתח בצורה מהוססת. כבר בדקה החמישית ספגה ארסנל שער מוקדם, 
-    לאחר חוסר תיאום בהגנה שאִפשר ליריבה לעלות ליתרון בקלות מפתיעה.</p>
+  <!-- רשימת סיקורים -->
+  <div class="reviews-list">
+    <h2>📜 רשימת סיקורים</h2>
+    <ul>
+      <li><a href="#">סיקור: ארסנל 3 - ליברפול 1</a></li>
+      <!-- הוסף עוד שורות כשיש סיקורים -->
+    </ul>
+  </div>
 
-    <p>אחרי חצי שעה רדומה, הגיע הרגע הראשון של ארסנל במשחק – ובגדול. בדקה ה-32, מהלך של לחץ גבוה אחרי איבוד כדור הסתיים בסדרת 
-    מסירות מהירות ושער נהדר של <strong>מרינו</strong>, שקובע שוויון 1-1.</p>
-
-    <p>עוד לפני שנרגענו מהשוויון – הגיע המהפך. כדור רוחב מסוכן שפגע בשחקן ניוקאסל מצא את דרכו פנימה – <strong>2-1 לארסנל!</strong></p>
-
-    <p>למרות הדקות הטובות של התותחנים, ניוקאסל לא ויתרה, ובדקה ה-57 השוותה ל-2-2 בבעיטה מרשימה של <strong>מארפי</strong> מחוץ לרחבה.</p>
-
-    <p>במהלך המחצית השנייה ביצעה ארסנל חילופים רבים, כאשר <strong>אף שחקן שפתח לא סיים את המשחק</strong> – הזדמנות מצוינת 
-    לרוטציה ולבדיקת עומק הסגל.</p>
-
-    <p>בדקה ה-83 הגיע הרגע שהרים את כל האוהדים – <strong>מקס דואמן</strong>, ילד בן 15 בלבד, ביצע מהלך אישי מרהיב וגרם לפנדל, 
-    אותו תרגם <strong>מרטין אודגור</strong> לשער ניצחון – <strong>3-2 לארסנל</strong>.</p>
-
-    <h3>⭐ כוכב המשחק: מקס דואמן</h3>
-    <p><strong>הילד כבש את הלבבות</strong>. עם ביטחון, מהירות ויצירתיות – הוא גנב את ההצגה והוכיח שיש למה לחכות. עתיד מבטיח לתותחנים.</p>
-  </section>
-
-  <!-- סיקור שני -->
-  <section class="match-box">
-    <h2>⚽ סיקור משחק: ארסנל 0 - טוטנהאם 1</h2>
-
-    <p>במשחק שנערך היום, ארסנל פגשה את היריבה הגדולה <strong>טוטנהאם</strong> למשחק הכנה נוסף. טוטנהאם ניצחה בתוצאה 1-0, 
-    משער יוצא דופן שהובקע כבר במחצית הראשונה – בעיטה אדירה מחצי מגרש שנכנסה לאחר איבוד כדור וטעות קשה של השוער <strong>ראיה</strong>.</p>
-
-    <p>למרות הספיגה, ארסנל ניסתה להגיב ושיתפה שחקנים רבים במהלך המשחק, כולל הופעת בכורה של החלוץ החדש <strong>ויקטור גיורקס</strong>, 
-    שביצע כמה תנועות טובות אך לא הגיע להזדמנות ממשית.</p>
-
-    <p>התצוגה ההתקפית של ארסנל הייתה חלשה יחסית, אך ניתן לראות במשחק זה חלק מתהליך ההכנה והניסוי, עם הרבה רוטציה ושילוב של שחקני סגל.</p>
-
-    <h3>📝 סיכום</h3>
-    <p>המשחק לא האיר פנים לארסנל, אך הוא שימש כהזדמנות נוספת לבדוק שחקנים ולבחון התאמות. כעת ארטטה צריך להפיק לקחים ולכוון את הקבוצה ליכולת טובה יותר בהמשך ההכנות לעונה הקרובה.</p>
-  </section>
+  <!-- טבלת ליגה -->
+  <div class="league-table">
+    <h2>📊 טבלת הליגה</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>מקום</th>
+          <th>קבוצה</th>
+          <th>משחקים</th>
+          <th>נקודות</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>ארסנל</td>
+          <td>1</td>
+          <td>3</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>ליברפול</td>
+          <td>1</td>
+          <td>0</td>
+        </tr>
+        <!-- הוסף שורות בהתאם למצב הליגה -->
+      </tbody>
+    </table>
+  </div>
 
 </body>
 </html>
+
 
