--- a/matches.html
+++ b/matches.html
@@ -200,14 +200,14 @@
           <tr><td>7</td><td>קריסטל פאלאס</td><td>0</td><td>0</td></tr>
           <tr><td>8</td><td>אברטון</td><td>0</td><td>0</td></tr>
           <tr><td>9</td><td>פולהאם</td><td>0</td><td>0</td></tr>
-          <tr><td>10</td><td>איפסוויץ'</td><td>0</td><td>0</td></tr>
-          <tr><td>11</td><td>לסטר סיטי</td><td>0</td><td>0</td></tr>
+          <tr><td>10</td><td>ברנלי'</td><td>0</td><td>0</td></tr>
+          <tr><td>11</td><td>לידס </td><td>0</td><td>0</td></tr>
           <tr><td>12</td><td>ליברפול</td><td>0</td><td>0</td></tr>
           <tr><td>13</td><td>מנצ'סטר סיטי</td><td>0</td><td>0</td></tr>
           <tr><td>14</td><td>מנצ'סטר יונייטד</td><td>0</td><td>0</td></tr>
           <tr><td>15</td><td>ניוקאסל</td><td>0</td><td>0</td></tr>
           <tr><td>16</td><td>נוטינגהאם פורסט</td><td>0</td><td>0</td></tr>
-          <tr><td>17</td><td>סאות'המפטון</td><td>0</td><td>0</td></tr>
+          <tr><td>17</td><td>סנדרלנד</td><td>0</td><td>0</td></tr>
           <tr><td>18</td><td>טוטנהאם</td><td>0</td><td>0</td></tr>
           <tr><td>19</td><td>ווסטהאם</td><td>0</td><td>0</td></tr>
           <tr><td>20</td><td>וולבס</td><td>0</td><td>0</td></tr>
@@ -218,6 +218,7 @@
 
 </body>
 </html>
+
 
 
 
