--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <nav>
     <a href="index.html">ראשי</a>
-    <a href="matches.html">סיקור משחקים</a>
+    <a href="matches.html">סיקור משחקים </a>
      <a href="lineups.html">עמוד המשחק  </a>
     <a href="https://idanschmidt.github.io/Idan-schmidt--QA/">לבלוג QA שלי</a>
   </nav>
@@ -73,7 +73,7 @@
   </section>
 
 <section>
-  <h2>לקראת המשחק</h2>
+  <h2>לקראת המשחק הקרוב</h2>
   <p>
     ביום ראשון הקרוב זה מתחיל – העונה החדשה, והפעם עם מבחן קשה כבר במחזור הראשון: 
     משחק חוץ מול מנצ'סטר יונייטד המתחדשת. שתי הקבוצות עשו שינויים וחיזוקים בקיץ, 
@@ -130,6 +130,7 @@
 
 </body>
 </html>
+
 
 
 
