--- a/matches.html
+++ b/matches.html
@@ -200,7 +200,7 @@
           <tr><td>7</td><td>קריסטל פאלאס</td><td>0</td><td>0</td></tr>
           <tr><td>8</td><td>אברטון</td><td>0</td><td>0</td></tr>
           <tr><td>9</td><td>פולהאם</td><td>0</td><td>0</td></tr>
-          <tr><td>10</td><td>ברנלי'</td><td>0</td><td>0</td></tr>
+          <tr><td>10</td><td>ברנלי</td><td>0</td><td>0</td></tr>
           <tr><td>11</td><td>לידס </td><td>0</td><td>0</td></tr>
           <tr><td>12</td><td>ליברפול</td><td>0</td><td>0</td></tr>
           <tr><td>13</td><td>מנצ'סטר סיטי</td><td>0</td><td>0</td></tr>
@@ -218,6 +218,7 @@
 
 </body>
 </html>
+
 
 
 
