--- a/matches.html
+++ b/matches.html
@@ -157,25 +157,27 @@
       <a href="index.html">חזרה לדף הראשי</a>
     </nav>
 
-    <!-- כרטיסי משחק -->
-    <div class="cards-container">
-      <div class="match-card">
-        <h3>ארסנל 3 - ליברפול 1</h3>
-        <img src="https://upload.wikimedia.org/wikipedia/en/5/53/Arsenal_FC.svg" alt="סמל ארסנל">
-        <img src="https://upload.wikimedia.org/wikipedia/en/0/0c/Liverpool_FC.svg" alt="סמל ליברפול">
-        <p>תאריך: 15/08/2025</p>
-        <a href="#">לקריאת הסיקור</a>
-      </div>
-    </div>
+   <!-- כרטיסי משחק -->
+<div class="cards-container">
+  <div class="match-card">
+    <h3>ארסנל 3 - ליברפול 1</h3>
+    <img src="https://upload.wikimedia.org/wikipedia/en/5/53/Arsenal_FC.svg" alt="סמל ארסנל">
+    <img src="https://upload.wikimedia.org/wikipedia/en/0/0c/Liverpool_FC.svg" alt="סמל ליברפול">
+    <p>תאריך: 15/08/2025</p>
+    <a href="#match-review">לקריאת הסיקור</a>
+  </div>
+</div>
 
-    <!-- רשימת סיקורים -->
-    <div class="reviews-list">
-      <h2>📜 רשימת סיקורים</h2>
-      <ul>
-        <li><a href="#">סיקור: ארסנל 3 - ליברפול 1 (משחק הכנה)</a> – משחק הכנה שבו ארסנל הציגה שליטה ברוב דקות המשחק והדגימה רוטציה רחבה, הזדמנות לשחקנים צעירים להרשים.</li>
-      </ul>
-    </div>
-  </main>
+<!-- אזור סיקור -->
+<section id="match-review" style="background-color:white; border-radius:10px; padding:20px; margin-bottom:40px; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
+  <h2 style="color:#ba0c2f;">⚽ ארסנל - מנצ'סטר יונייטד | מחזור ראשון</h2>
+  <p>
+    כאן בעתיד יופיע הסיקור המלא של המשחק.  
+    כרגע האזור הזה ריק כי המשחק עדיין לא התקיים,  
+    אבל כאן אני אוסיף את כל המחשבות, הסטטיסטיקות והתחושות שלי אחרי המחזור הראשון.
+  </p>
+</section>
+
 
   <!-- טבלת ליגה בצד ימין -->
   <aside>
@@ -218,6 +220,7 @@
 
 </body>
 </html>
+
 
 
 
