--- a/matches.html
+++ b/matches.html
@@ -162,11 +162,11 @@
 <!-- אזור סיקור -->
 <section id="match-review" style="background-color:white; border-radius:10px; padding:20px; margin-bottom:40px; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
   <h2 style="color:#ba0c2f;">⚽ ארסנל - מנצ'סטר יונייטד | מחזור ראשון</h2>
-  <p>
-    כאן בעתיד יופיע הסיקור המלא של המשחק.  
-    כרגע האזור הזה ריק כי המשחק עדיין לא התקיים,  
-    אבל כאן אני אוסיף את כל המחשבות, הסטטיסטיקות והתחושות שלי אחרי המחזור הראשון.
-  </p>
+  <a href="https://strikeout.im/epl/1/manchester-united-vs-arsenal-stream" target="_blank" 
+     style="display:inline-block; margin-top:15px; padding:10px 15px; background-color:#ba0c2f; color:white; text-decoration:none; border-radius:5px;">
+    🎥 לחץ כאן לצפייה במשחק
+  </a>
+</section>
 </section>
 
 
@@ -211,6 +211,7 @@
 
 </body>
 </html>
+
 
 
 
