--- a/lineups.html
+++ b/lineups.html
@@ -121,12 +121,18 @@
     </tbody>
   </table>
 
-  <p><strong>קישור לצפייה במשחק:</strong> קישור יעלה לפני המשחק</p>
+ <p>
+  <strong>קישור לצפייה במשחק:</strong>
+  <a href="https://strikeout.im/epl/1/manchester-united-vs-arsenal-stream" target="_blank">
+    לחץ כאן לצפייה
+  </a>
+</p>
 
   <a class="back-link" href="index.html">← חזרה לדף הראשי</a>
 
 </body>
 </html>
+
 
 
 
