--- a/lineups.html
+++ b/lineups.html
@@ -100,23 +100,23 @@
     <tbody>
       <tr>
         <td>שוער</td>
-        <td>—</td>
-        <td>—</td>
+        <td>ראיה</td>
+        <td>אוננה</td>
       </tr>
       <tr>
         <td>הגנה</td>
-        <td>—</td>
-        <td>—</td>
+        <td>טימבר,סאליבה,גבריאל,סקלי</td>
+        <td>יורו,דה ליכט,שואו</td>
       </tr>
       <tr>
         <td>קישור</td>
-        <td>—</td>
-        <td>—</td>
+        <td>אודגארד,רייס,זובימנדי</td>
+        <td>דיאלו,אוגרטה,קאסמירו,דורגו,פרננדש</td>
       </tr>
       <tr>
         <td>התקפה</td>
-        <td>—</td>
-        <td>—</td>
+        <td>סאקה,גיורקס,מאדוקה</td>
+        <td>אמבואמו,קוניה</td>
       </tr>
     </tbody>
   </table>
@@ -132,6 +132,7 @@
 
 </body>
 </html>
+
 
 
 
