--- a/lineups.html
+++ b/lineups.html
@@ -120,6 +120,12 @@
       </tr>
     </tbody>
   </table>
+  <h3>נתוני המשחק</h3>
+  <div class="match-stats">
+    <p><strong>כובשים:</strong> (תכניס כאן את שמות הכובשים)</p>
+    <p><strong>בישולים:</strong> (תכניס כאן את שמות המבשלים)</p>
+    <p><strong>חילופים:</strong> (תכניס כאן את רשימת החילופים)</p>
+  </div>
 
  <p>
   <strong>קישור לצפייה במשחק:</strong>
@@ -132,6 +138,7 @@
 
 </body>
 </html>
+
 
 
 
