--- a/lineups.html
+++ b/lineups.html
@@ -122,9 +122,9 @@
   </table>
   <h3>נתוני המשחק</h3>
   <div class="match-stats">
-    <p><strong>כובשים:</strong> (תכניס כאן את שמות הכובשים)</p>
-    <p><strong>בישולים:</strong> (תכניס כאן את שמות המבשלים)</p>
-    <p><strong>חילופים:</strong> (תכניס כאן את רשימת החילופים)</p>
+    <p><strong>כובשים:</strong> </p>
+    <p><strong>בישולים:</strong> </p>
+    <p><strong>חילופים:</strong> </p>
   </div>
 
  <p>
@@ -138,6 +138,7 @@
 
 </body>
 </html>
+
 
 
 
