--- a/lineups.html
+++ b/lineups.html
@@ -101,21 +101,21 @@
       <tr>
         <td>שוער</td>
         <td>ראיה</td>
-        <td>אוננה</td>
+        <td>ביינדיר</td>
       </tr>
       <tr>
         <td>הגנה</td>
-        <td>טימבר,סאליבה,גבריאל,סקלי</td>
-        <td>יורו,דה ליכט,שואו</td>
+        <td>וייט,סאליבה,גבריאל,קאלאפיורי</td>
+        <td>יורו,דה ליכט,שואו,דאלוט,דורגו</td>
       </tr>
       <tr>
         <td>קישור</td>
         <td>אודגארד,רייס,זובימנדי</td>
-        <td>דיאלו,אוגרטה,קאסמירו,דורגו,פרננדש</td>
+        <td>מאונט,קאסמירו,פרננדש</td>
       </tr>
       <tr>
         <td>התקפה</td>
-        <td>סאקה,גיורקס,מאדוקה</td>
+        <td>סאקה,גיורקס,מרטינלי</td>
         <td>אמבואמו,קוניה</td>
       </tr>
     </tbody>
@@ -138,6 +138,7 @@
 
 </body>
 </html>
+
 
 
 
