--- a/matches.html
+++ b/matches.html
@@ -147,7 +147,7 @@
         </p>
       </div>
 
-      <div class="image-placeholder">
+      <div class="ars.jpg">
         כאן תתווסף תמונה מהמשחק 🍕🍺
       </div>
     </section>
@@ -194,6 +194,7 @@
 
 </body>
 </html>
+
 
 
 
