--- a/matches.html
+++ b/matches.html
@@ -148,7 +148,7 @@
       </div>
 
       <div class="ars.jpg">
-        כאן תתווסף תמונה מהמשחק 🍕🍺
+       <img src="ars.jpg" alt="תיאור של התמונה" width="300">
       </div>
     </section>
   </main>
@@ -194,6 +194,7 @@
 
 </body>
 </html>
+
 
 
 
